# GarbageCollector-Cpp

./: .gitignore  CMakeLists.txt
gc/: CMakeLists.txt  garbagecollector.cpp  garbagecollector.h  garbagecollector_m.h  gc_global.h  gc_shared.h  memorymanagement.h  minfo.cpp  minfo.h
tests/: CMakeLists.txt  main.cpp
